RESOLVED FIXED173288
Crash when MSE backed media element changes src/srcObject during PiP
https://bugs.webkit.org/show_bug.cgi?id=173288
Summary Crash when MSE backed media element changes src/srcObject during PiP
Jer Noble
Reported 2017-06-12 16:48:54 PDT
Crash when MSE backed media element changes src/srcObject
Attachments
Patch (1.82 KB, patch)
2017-06-12 20:39 PDT, Jer Noble
no flags
Archive of layout-test-results from ews101 for mac-elcapitan (1.07 MB, application/zip)
2017-06-12 21:12 PDT, Build Bot
no flags
Jer Noble
Comment 1 2017-06-12 20:39:36 PDT
Jer Noble
Comment 2 2017-06-12 20:41:56 PDT
Build Bot
Comment 3 2017-06-12 21:12:04 PDT
Comment on attachment 312746 [details] Patch Attachment 312746 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/3921165 New failing tests: media/media-source/media-source-unnecessary-seek-seeked.html
Build Bot
Comment 4 2017-06-12 21:12:05 PDT
Created attachment 312747 [details] Archive of layout-test-results from ews101 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Jer Noble
Comment 5 2017-06-13 14:40:19 PDT
Looks like that test failure was caused by <https://trac.webkit.org/changeset/218150/webkit>. So landing this bug while I work on the flakey test.
WebKit Commit Bot
Comment 6 2017-06-13 15:07:54 PDT
Comment on attachment 312746 [details] Patch Clearing flags on attachment: 312746 Committed r218209: <http://trac.webkit.org/changeset/218209>
WebKit Commit Bot
Comment 7 2017-06-13 15:07:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.