Crash when MSE backed media element changes src/srcObject during PiP https://bugs.webkit.org/show_bug.cgi?id=173288

Reviewed by Alex Christensen.

Tear down the MediaPlayerPrivateMediaSourceAVFObjC's layers fully whe the player
is destroyed, which includes removing the player's AVSampleBufferDisplayLayer from
the HTMLMediaElement's fullscreen layer.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::~MediaPlayerPrivateMediaSourceAVFObjC):


Canonical link: https://commits.webkit.org/190191@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218209 268f45cc-cd09-0410-ab3c-d52691b4dbfc